fixed page zoomed on mobile for seeker#edit/new

--- a/app/assets/stylesheets/seekers.scss
+++ b/app/assets/stylesheets/seekers.scss
@@ -372,4 +372,7 @@
     .job_show {
       margin-left: 15px;
     }
+    .profile_form  {
+      width: auto !important;
+    }
 }
